# bot-invest

./: .dockerignore  .env.example  .gitignore  Dockerfile  NEXT_TASK.md  PROJECT_CONTEXT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
migrations/: env.py
migrations/versions/: 20260602_initial_models.py
src/moex_analyst/: __init__.py  bot_entrypoint.py  main.py  scheduler_entrypoint.py
src/moex_analyst/application/: __init__.py  exceptions.py
src/moex_analyst/application/ports/: notifier.py  unit_of_work.py
src/moex_analyst/application/services/: __init__.py  dto.py  forecast_tracking.py
src/moex_analyst/application/use_cases/: __init__.py  _common.py  analyze_instrument.py  dto.py  market_overview.py  watchlist.py
src/moex_analyst/core/: db_settings.py  logging.py  settings.py
src/moex_analyst/di/: __init__.py  container.py  providers.py
src/moex_analyst/domain/alerts/: __init__.py  detector.py  dto.py  enums.py  rules.py
src/moex_analyst/domain/analysis/: __init__.py  engine.py  enums.py  errors.py  indicators.py  levels.py  probability.py  result.py  scenarios.py  structure.py  trend.py  volume.py
src/moex_analyst/domain/market/: __init__.py  candle.py  timeframe.py
src/moex_analyst/infrastructure/db/: base.py  engine.py  unit_of_work.py
src/moex_analyst/infrastructure/db/models/: __init__.py  alert_record.py  analysis_record.py  forecast_record.py
src/moex_analyst/infrastructure/db/repositories/: __init__.py  alert_repository.py  analysis_repository.py  base.py  forecast_repository.py
src/moex_analyst/infrastructure/moex/: __init__.py  config.py  dto.py  errors.py  mapping.py
src/moex_analyst/infrastructure/moex/parsing/: mapper.py  parser.py
src/moex_analyst/infrastructure/moex/services/: candles.py  instruments.py  quotes.py
src/moex_analyst/infrastructure/moex/transport/: client.py  rate_limiter.py  retry.py
src/moex_analyst/infrastructure/notifications/: __init__.py  dedup.py  formatter.py  telegram_notifier.py
src/moex_analyst/presentation/api/: router.py
src/moex_analyst/presentation/bot/: commands.py
src/moex_analyst/presentation/bot/callbacks/: __init__.py
src/moex_analyst/presentation/bot/formatters/: __init__.py  analysis.py  market.py  misc.py  settings.py  signals.py  statistics.py  text.py  watchlist.py
src/moex_analyst/presentation/bot/handlers/: __init__.py  _common.py  analyze.py  errors.py  overview.py  settings.py  signals.py  start_help.py
src/moex_analyst/presentation/bot/keyboards/: __init__.py
src/moex_analyst/presentation/bot/middlewares/: __init__.py  logging.py  throttling.py
src/moex_analyst/presentation/bot/routers/: __init__.py
src/moex_analyst/scheduler/: __init__.py  notification_jobs.py  persistence_jobs.py  registry.py  services.py
tests/unit/alerts/: conftest.py  test_detector.py  test_dto.py  test_rules.py
tests/unit/analysis/: conftest.py  test_components.py  test_engine.py  test_indicators.py  test_scenarios.py
tests/unit/db/: test_models.py  test_repositories.py
tests/unit/infrastructure/: test_moex_mapping.py
tests/unit/notifications/: test_dedup.py  test_formatter.py  test_notification_jobs.py  test_telegram_notifier.py
tests/unit/presentation/bot/: conftest.py  test_callbacks.py  test_commands.py  test_handlers_analyze.py  test_handlers_errors.py  test_handlers_overview.py  test_handlers_start_help.py  test_keyboards.py  test_middlewares_logging.py  test_middlewares_throttling.py  test_routers.py
tests/unit/presentation/bot/formatters/: conftest.py  test_analysis.py  test_market.py  test_misc.py  test_statistics.py  test_text.py
tests/unit/scheduler/: test_persistence_jobs.py  test_registry.py  test_services.py
tests/unit/services/: test_forecast_tracking.py
